# renovatebot-testing

./: .gitignore  hello.py  pyproject.toml
.github/workflows/: renovatebot.yml
lib1/: hello.py  pyproject.toml
lib2/: pyproject.toml
